# Jules

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_OPTIMIZATION.md  DEPENDENCY_OPTIMIZATION_REPORT.md  ITERATION_PLAN_v1.1.md  LICENSE  OPTIMIZATION_SUMMARY.md  PRE_COMMIT_QUICK_REFERENCE.md  PRE_COMMIT_SETUP.md  PRE_COMMIT_SUMMARY.md  README.md  SETUP_SUMMARY.md  docker-compose.yml  python_project_analysis.md  start.sh
.github/: QUICK_REFERENCE.md  README.md  SUMMARY.md
.github/workflows/: backend-ci.yml  code-quality.yml  db-migration.yml  deploy.yml  docker-build.yml  frontend-ci.yml  pr-checks.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.optimized  README.md  coverage.json  coverage.xml  coverage_report.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_user_auth.py  003_progress_tables.py  004_agent_execution_output_fields.py
backend/app/: __init__.py  main.py
backend/app/agent/: README.md  __init__.py  analyzer.py  config.py  executor.py  llm_client.py  scheduler.py  worker.py
backend/app/agent/prompts/: bug_fix.txt  cli_tool.txt  data_analysis.txt  refactor.txt  web_app.txt
backend/app/api/: __init__.py
backend/app/api/v1/: README.md  __init__.py  agents.py  auth.py  code_files.py  executions.py  health.py  progress.py  quality.py  tasks.py  users.py  websocket.py
backend/app/core/: __init__.py  config.py  connection_manager.py  jwt_handler.py  progress_calculator.py  security.py
backend/app/database/: __init__.py  base.py  connection.py  session.py
backend/app/dependencies/: __init__.py  auth.py  database.py  pagination.py
backend/app/models/: __init__.py  agent.py  agent_execution.py  code_file.py  code_version.py  llm_call.py  progress.py  project.py  quality_metric.py  task.py  user.py
backend/app/repositories/: __init__.py  agent_execution_repository.py  agent_repository.py  code_file_repository.py  code_version_repository.py  progress_repository.py  quality_metric_repository.py  task_repository.py  user_repository.py
backend/app/schemas/: __init__.py  agent_progress.py  agent_schema.py  auth_schema.py  code_file_schema.py  execution_schema.py  progress_api.py  quality_schema.py  task_schema.py  user_schema.py  websocket.py
backend/config/: redis.conf
backend/scripts/: init-db.sql
backend/tests/: conftest.py  test_agent_analyzer.py  test_agent_execution_repository.py  test_agent_executor.py  test_agent_llm_client.py  test_agent_repository.py  test_agent_scheduler.py  test_agent_worker.py  test_api_agents.py  test_api_auth.py  test_api_code_files.py  test_api_executions.py  test_api_health.py  test_api_quality.py  test_api_tasks.py  test_api_users.py  test_code_file_repository.py  test_code_version_repository.py  test_quality_metric_repository.py  test_task_repository.py  test_user_repository.py
backend/tests/integration/: test_progress_api.py  test_websocket_integration.py
backend/tests/unit/: __init__.py  test_progress_calculator.py  test_progress_repository.py
backend/tests/unit/agent/: __init__.py  test_analyzer.py  test_executor.py  test_scheduler.py
backend/tests/unit/websocket/: __init__.py  test_connection_manager.py  test_message_protocol.py
docs/: database.md  development.md  tech-stack.md
docs/api/: websocket-examples.md  websocket.md
docs/architecture/: agent-orchestration.md  api-design.md  data-model.md  deployment.md  quality-assurance.md  system-architecture.md
docs/design/: agent-progress-state-machine.md  progress-tracking-api.md  progress-ui-prototype.md  websocket-connection-manager.md  websocket-message-protocol.md  websocket-test-plan.md
frontend/: .dockerignore  .eslintrc.json  .prettierignore  Dockerfile  Dockerfile.optimized  README.md  commitlint.config.js  next.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/.husky/: commit-msg  pre-commit
frontend/app/: layout.tsx  page.tsx
frontend/components/: DataTable.test.tsx  DataTable.tsx  (+6 more)
(+78 files in other folders)
